--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:background="@android:color/white">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,7 +24,9 @@
                 android:layout_height="wrap_content"
                 android:text="No. of Questions"
                 android:layout_marginTop="16dp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:focusable="true"
+                android:focusableInTouchMode="true"/>
 
             <EditText
                 android:id="@+id/editTextQuestion"
@@ -32,7 +35,7 @@
                 android:layout_marginTop="5dp"
                 android:background="@drawable/box"
                 android:inputType="numberDecimal"
-                android:padding="5dp"/>
+                android:padding="5dp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -88,25 +91,32 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white">
+        android:layout_height="wrap_content">
 
         <Button
-            android:id="@+id/buttonRandom"
+            android:id="@+id/buttonRandomQuiz"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="35dp"
             android:text="Random Quiz"
             android:textAllCaps="false"
-            android:layout_margin="5dp"/>
+            android:layout_margin="10dp"
+            android:padding="5dp"
+            android:background="@drawable/rounded_button"
+            android:textColor="@android:color/white"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/buttonTakeQuiz"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_height="35dp"
+            android:layout_margin="10dp"
+            android:textStyle="bold"
+            android:textColor="@android:color/white"
+            android:background="@drawable/rounded_button"
             android:text="Take Quiz"
             android:textAllCaps="false"
             android:layout_alignParentEnd="true"
+            android:enabled="false"
             android:layout_alignParentRight="true"/>
 
     </RelativeLayout>
