--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -30,7 +30,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Correct Answers: "
+                    android:text="@string/correct_answers"
                     android:textStyle="bold"
                     android:textColor="@android:color/black"
                     android:focusable="true"
@@ -58,7 +58,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Attempted: "
+                    android:text="@string/attempted"
                     android:textStyle="bold"
                     android:textColor="@android:color/black"
                     android:focusable="true"
@@ -76,7 +76,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Solutions: "
+                android:text="@string/solutions"
                 android:textColor="@android:color/black"
                 android:textStyle="bold"
                 android:padding="16dp"/>
@@ -105,7 +105,7 @@
             android:id="@+id/buttonFinish"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
-            android:text="Finish"
+            android:text="@string/finish"
             android:layout_margin="10dp"
             android:textAllCaps="false"
             android:background="@drawable/rounded_button"
