--- a/app/src/main/res/layout/multiple_question.xml
+++ b/app/src/main/res/layout/multiple_question.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -25,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
-                android:text="kkdjfkdsjk"
+                tools:text="kkdjfkdsjk"
                 android:textColor="@android:color/black"/>
 
             <RadioGroup
