--- a/app/src/main/res/layout/result_multiple.xml
+++ b/app/src/main/res/layout/result_multiple.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -30,7 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
-                android:text="kkdjfkdsjk"
+                tools:text="kkdjfkdsjk"
                 android:textColor="@android:color/black"
                 android:layout_marginTop="8dp"/>
 
@@ -76,7 +77,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
-                    android:text="Ans: "
+                    android:text="@string/ans"
                     android:textColor="@android:color/black"
                     android:textStyle="bold"/>
 
@@ -85,7 +86,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
-                    android:text="kkdjfkdsjk"
+                    tools:text="kkdjfkdsjk"
+                    android:paddingLeft="5dp"
+                    android:paddingStart="5dp"
+                    android:paddingRight="5dp"
+                    android:paddingEnd="5dp"
                     android:textColor="@android:color/black" />
 
             </LinearLayout>
