--- a/app/src/main/res/layout/result_tf.xml
+++ b/app/src/main/res/layout/result_tf.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -31,7 +32,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
-                android:text="kkdjfkdsjk"
+                tools:text="kkdjfkdsjk"
                 android:layout_marginTop="8dp"
                 android:textColor="@android:color/black"/>
 
@@ -66,7 +67,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
-                    android:text="Ans: "
+                    android:text="@string/ans"
                     android:textColor="@android:color/black"
                     android:textStyle="bold"/>
 
@@ -75,7 +76,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
-                    android:text="kkdjfkdsjk"
+                    tools:text="kkdjfkdsjk"
+                    android:paddingLeft="5dp"
+                    android:paddingStart="5dp"
+                    android:paddingRight="5dp"
+                    android:paddingEnd="5dp"
                     android:textColor="@android:color/black" />
 
             </LinearLayout>
